# codeshewrote

.github/workflows/: terraform-apply.yml  terraform-destroy.yml  terraform-plan.yml
code/: README.md  ansible.cfg
code/ansible/naqeeb/: mysql-upgrade.yml
code/bash/: aws.sh  conflue.sh  copy.sh  edit.sh  lives.html  minicube.sh
code/iam/: iam-time.json  policy-ec2-strict.json  policy-lambda-strict.json  policy-s3.json  policy-secure-transport.json
code/pys/: athena-query.py  confluence.update.py  cost.py  datalake.py  decomissionuser.py  dynamodb-scaling.py  flatten.glue.py  glue.py  graphviz.py  lambda.ami.py  rds2ddb.py  redisto3stransition.py  reds2ddb.py  reds2toddb.py  s3-red-huge.py  s3-redshift-import.py  s3.py
code/ruby/: q2.rb  redshift.rb
code/terraform/: ~
env/dev/: main.tf
generics/: README.md  ansible.cfg  install-monit.yml  install-phpmyadmin.yml  install-prom-graf.yml  install-prometheus.yml  modify-phpmyadmin.yml  my_billing_deploy.yaml  patch-os-ulimit.yml  sageone-instance-reszie.yml
generics/templates/: decrypter.gem  phpmyadmin.yaml.j2
python/aws-mara-auditor/: pyproject.toml
python/aws-mara-terraformer/: main.py  pyproject.toml
terraform/App/: main.tf  outputs.tf  variables.tf
terraform/AppDB/: main.tf  outputs.tf  variables.tf
terraform/IIS/: main-slim.tf  main.tf  output.tf  outputs.tf  vars.tf
terraform/Reporting/: main.tf  outputs.tf  variables.tf
terraform/SFTP/: main.tf  outputs.tf  variables.tf
terraform/SQLServ/: main.tf  outputs.tf  variables.tf
terraform/prereqs/: main.tf  outputs.tf  variables.tf
(+153 files in other folders)
