[project]
name = "aws-mara-audit"
version = "1.1.0"
description = "A python paginating auditor for aws accounts that use AWS credential sets"
authors = [
    {name = "Wendy Weber"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
